--- a/templates/results.html
+++ b/templates/results.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="table-users">
-   <div class="header">Calculation Result</div>
+   <div class="header">Predictions</div>
 
       {{result}}
 </div>
